--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
      <x>0</x>
      <y>0</y>
      <width>1000</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
@@ -70,13 +70,25 @@
    <addaction name="actionZoom_out"/>
   </widget>
   <action name="actionCamera_1">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Camera 1</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+1</string>
+   </property>
   </action>
   <action name="actionCamera_2">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Camera 2</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+2</string>
    </property>
   </action>
   <action name="actionWiki">
