--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/shaders">
         <file>fphong.glsl</file>
         <file>vphong.glsl</file>
+        <file>fphongtex.glsl</file>
+        <file>vphongtex.glsl</file>
     </qresource>
 </RCC>
