--- a/resources.qrc
+++ b/resources.qrc
@@ -5,4 +5,12 @@
         <file>fphongtex.glsl</file>
         <file>vphongtex.glsl</file>
     </qresource>
+    <qresource prefix="/">
+        <file>images/side6.png</file>
+        <file>images/side5.png</file>
+        <file>images/side4.png</file>
+        <file>images/side3.png</file>
+        <file>images/side2.png</file>
+        <file>images/side1.png</file>
+    </qresource>
 </RCC>
