--- a/resources.qrc
+++ b/resources.qrc
@@ -6,6 +6,8 @@
         <file>vphongtex.glsl</file>
         <file>vgouraud.glsl</file>
         <file>fgouraud.glsl</file>
+        <file>vgouraudtex.glsl</file>
+        <file>fgouraudtex.glsl</file>
     </qresource>
     <qresource prefix="/">
         <file>images/side6.png</file>
@@ -14,5 +16,7 @@
         <file>images/side3.png</file>
         <file>images/side2.png</file>
         <file>images/side1.png</file>
+        <file>vgouraudtex.glsl</file>
+        <file>fgouraudtex.glsl</file>
     </qresource>
 </RCC>
